--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,11 +11,7 @@
 
 
 # Set root logger level to WARN and append to stdout
-log4j.rootLogger=DEBUG,stdout,A
-log4j.appender.A=org.apache.log4j.FileAppender
-log4j.appender.A.File=comun.log
-log4j.appender.A.layout=org.apache.log4j.PatternLayout
-log4j.appender.A.layout.ConversionPattern=%d [%p] %c:%L - %m%n
+log4j.rootLogger=ERROR,stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
