--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.sixlab</groupId>
-    <artifactId>SixTemplateEngine</artifactId>
+    <artifactId>six-tpl-engine</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>SixTemplateEngine</name>
+    <name>six-tpl-engine</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
@@ -45,28 +45,6 @@
 
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.8</version>
-                    <executions>
-                        <execution>
-                            <id>copy-jar-2-sixtools</id>
-                            <phase>package</phase>
-                            <configuration>
-                                <tasks>
-                                    <copyfile
-                                            src="${project.basedir}/target/${project.artifactId}-${project.version}.jar"
-                                            dest="/j/six-robot/gen/${project.artifactId}.jar">
-                                    </copyfile>
-                                </tasks>
-                            </configuration>
-                            <goals>
-                                <goal>run</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
