--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,46 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <groupId>cn.sixlab</groupId>
     <artifactId>six-tpl-engine</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <version>0.0.1</version>
+    <packaging>jar</packaging>
+
     <name>six-tpl-engine</name>
-    <url>http://maven.apache.org</url>
+    <description>Using the juicer(javascript template engine) develop a template engine by Java.</description>
+    <url>https://github.com/nianqinianyi/six-tpl-engine</url>
+
+    <developers>
+        <developer>
+            <id>nianqinianyi</id>
+            <name>loki of sixlab</name>
+            <email>nianqinianyi@163.com</email>
+            <url>http://i.sixlab.cn/</url>
+            <roles>
+                <role>founder</role>
+                <role>developer</role>
+            </roles>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>https://github.com/nianqinianyi/six-tpl-engine</url>
+        <connection>https://github.com/nianqinianyi/six-tpl-engine.git</connection>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>GPLv3</name>
+            <url>https://raw.githubusercontent.com/nianqinianyi/six-tpl-engine/master/LICENSE</url>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
@@ -26,6 +60,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -41,41 +81,21 @@
                     </archive>
                 </configuration>
             </plugin>
-        </plugins>
-
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.3</version>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                        <encoding>UTF-8</encoding>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
-    <reporting>
-        <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>2.2</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>dependency-updates-report</report>
-                            <report>plugin-updates-report</report>
-                            <report>property-updates-report</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
-    </reporting>
+    </build>
 
 </project>
