--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,18 @@
 *.class
-# *.jar  #
+*.jar
 *.war
 *.ear
 
 hs_err_pid*
-bin/
-target/
-temp/
+**bin/
+**target/
+**temp/
 .*/
 
 *.tmp
-.*
+.*/
 
 sonar-project.properties
-*.iml
 
 pom.xml.tag
 pom.xml.releaseBackup
